syntax="proto3";

// CQRS

// Command-Query Responsibility Segregation
// Functions should either change state, or measure state.
// GetX --> Query.  
// SetX --> Command.  Only return error messages.

service ConversationManager {
  rpc sortCIDs(CIDs) returns (ConvViewsList);
  rpc newConversation(UIDs) returns (Empty);
  rpc newMessage(Message) returns (Empty);
  rpc deleteConversation(CID) returns (Empty);
  rpc deleteHistoryOf(UID) returns (Empty);
}

message Empty {}

message CID {
  int32 CID = 1;
}

message CIDs {
  repeated CID CIDs = 1;
}

message UID {
  int32 UID = 1;
}

message UIDs {
  repeated UID UIDs = 1;
}

message Message {
  string Author = 1; // Do we really need this
  UID AuthorID = 2;
  string Content = 3;
  int64 Timestamp = 4;
}

message ConvView {
  string Content = 1;
  string Author = 2;
  int64 Timestamp = 3;
  int32 CID = 4;
}

message ConvViewsList {
  repeated ConvView Conversations = 1;
}